salesforce-migration/force-app/main/default/objects/Bouquet_Event__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>Bouquet_Order__c</referenceTo>
    <relationshipLabel>Bouquet Events</relationshipLabel>
    <relationshipName>Bouquet_Events</relationshipName>
    <type>Lookup</type>
</CustomField>