salesforce-migration/force-app/main/default/objects/Bouquet_Event__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <referenceTo>Bouquet_Payment__c</referenceTo>
    <relationshipLabel>Bouquet Events</relationshipLabel>
    <relationshipName>Bouquet_Events</relationshipName>
    <type>Lookup</type>
</CustomField>