salesforce-migration/force-app/main/default/objects/Bouquet_Event__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bouquet Events</relationshipLabel>
    <relationshipName>Bouquet_Events</relationshipName>
    <type>Lookup</type>
</CustomField>