salesforce-migration/force-app/main/default/objects/Bouquet_Event__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bouquet Events</relationshipLabel>
    <relationshipName>Bouquet_Events_User</relationshipName>
    <type>Lookup</type>
</CustomField>